# CodeMind

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: analysis.py  collaboration.py  health.py  integrations.py  oauth.py  rules.py  ws.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/models/: schemas.py
backend/app/services/: analysis_store.py  collaboration_store.py  git_providers.py  ml_client.py  oauth_client.py  oauth_store.py  redis_client.py  rule_engine.py  rule_store.py
backend/tests/: test_rule_engine.py  test_security_headers.py
frontend/: .env.example  Dockerfile  middleware.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/integrations/: page.tsx
frontend/app/reviews/: page.tsx
frontend/components/: integrations-panel.tsx  integrations-workspace.tsx  live-review.tsx  nav.tsx  notification-center.tsx  recent-reports.tsx  reviews-workspace.tsx  rule-manager.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx
frontend/hooks/: use-review-socket.ts
frontend/lib/: api.ts  types.ts
ml_service/: .env.example  Dockerfile  requirements.txt
ml_service/app/: config.py  engine.py  main.py  models.py
prisma/: schema.prisma
prisma/migrations/20260219000000_init/: migration.sql
prisma/migrations/20260220063444_update/: migration.sql
(+3 files in other folders)
